fix: client section wrap
git-svn-id: https://plugins.svn.wordpress.org/smartsupp-live-chat@2373801 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/assets/style.css
+++ b/trunk/assets/style.css
@@ -1638,7 +1638,6 @@ a:active {
 }
 
 .clients__container {
-	max-width: 676px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -1656,6 +1655,8 @@ a:active {
 .clients__logos {
 	max-width: 100%;
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .clients__logos img {
